Notification Type enum, added DETECTED_CONDITION to cover alarms/TCAs.
Removed supportedNotificationTypes and supportedObjectTypes from
NotificationSubscriptionService and corrected the association between
NotificationSubscriptionService and SubscriptionFilter from 1 to 1 to  1
to 0..*

--- a/OAS/tapi-equipment.yaml
+++ b/OAS/tapi-equipment.yaml
@@ -4690,25 +4690,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -4734,6 +4715,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -4744,6 +4750,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -4771,12 +4782,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -4788,6 +4804,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -4803,7 +4824,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -4815,6 +4836,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -4840,6 +4866,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -4871,6 +4902,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -9190,18 +9226,18 @@ definitions:
   tapi.equipment.ObjectNotificationAugmentation5:
     type: "object"
     properties:
-      abstract-strand:
+      equipment:
         description: "none"
-        $ref: "#/definitions/tapi.equipment.AbstractStrand"
+        $ref: "#/definitions/tapi.equipment.Equipment"
     x-augmentation:
       prefix: "tapi-equipment"
       namespace: "urn:onf:otcc:yang:tapi-equipment"
   tapi.equipment.ObjectNotificationAugmentation6:
     type: "object"
     properties:
-      equipment:
+      abstract-strand:
         description: "none"
-        $ref: "#/definitions/tapi.equipment.Equipment"
+        $ref: "#/definitions/tapi.equipment.AbstractStrand"
     x-augmentation:
       prefix: "tapi-equipment"
       namespace: "urn:onf:otcc:yang:tapi-equipment"
@@ -9591,6 +9627,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -9601,25 +9640,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -10104,18 +10130,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
