--- a/OAS/tapi-notification.yaml
+++ b/OAS/tapi-notification.yaml
@@ -1491,25 +1491,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -1535,6 +1516,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -1545,6 +1551,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -1572,12 +1583,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -1589,6 +1605,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -1604,7 +1625,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -1616,6 +1637,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -1641,6 +1667,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -1672,6 +1703,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -2478,6 +2514,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -2488,25 +2527,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
