--- a/OAS/tapi-oam.yaml
+++ b/OAS/tapi-oam.yaml
@@ -13726,25 +13726,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -13770,6 +13751,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -13780,6 +13786,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -13807,12 +13818,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -13824,6 +13840,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -13839,7 +13860,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -13851,6 +13872,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -13876,6 +13902,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -13907,6 +13938,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -26277,9 +26313,9 @@ definitions:
   tapi.connectivity.ObjectNotificationAugmentation10:
     type: "object"
     properties:
-      connection-end-point:
+      connectivity-service-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
+        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -26295,9 +26331,9 @@ definitions:
   tapi.connectivity.ObjectNotificationAugmentation9:
     type: "object"
     properties:
-      connectivity-service-end-point:
+      connection-end-point:
         description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
+        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -27132,6 +27168,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -27142,25 +27181,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -27975,27 +28001,27 @@ definitions:
   tapi.oam.ObjectNotificationAugmentation14:
     type: "object"
     properties:
-      oam-job:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.OamJob"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation15:
-    type: "object"
-    properties:
       oam-service:
         description: "none"
         $ref: "#/definitions/tapi.oam.OamService"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.ObjectNotificationAugmentation15:
+    type: "object"
+    properties:
+      oam-job:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.OamJob"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.ObjectNotificationAugmentation4:
     type: "object"
     properties:
-      meg:
+      pm-threshold-data:
         description: "none"
-        $ref: "#/definitions/tapi.oam.Meg"
+        $ref: "#/definitions/tapi.oam.PmThresholdData"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -28011,18 +28037,18 @@ definitions:
   tapi.oam.ObjectNotificationAugmentation6:
     type: "object"
     properties:
-      pm-threshold-data:
+      mep:
         description: "none"
-        $ref: "#/definitions/tapi.oam.PmThresholdData"
+        $ref: "#/definitions/tapi.oam.Mep"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.ObjectNotificationAugmentation7:
     type: "object"
     properties:
-      mep:
+      meg:
         description: "none"
-        $ref: "#/definitions/tapi.oam.Mep"
+        $ref: "#/definitions/tapi.oam.Meg"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -28746,27 +28772,27 @@ definitions:
   tapi.path.computation.ObjectNotificationAugmentation1:
     type: "object"
     properties:
-      path-service-end-point:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation2:
-    type: "object"
-    properties:
       path-optimization-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation3:
+  tapi.path.computation.ObjectNotificationAugmentation2:
     type: "object"
     properties:
       path-objective-function:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
+  tapi.path.computation.ObjectNotificationAugmentation3:
+    type: "object"
+    properties:
+      path-service-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -29408,18 +29434,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -29952,18 +29978,18 @@ definitions:
   tapi.topology.ObjectNotificationAugmentation11:
     type: "object"
     properties:
-      rule:
+      network-topology-service:
         description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
+        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.ObjectNotificationAugmentation12:
     type: "object"
     properties:
-      network-topology-service:
+      rule:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
