--- a/OAS/tapi-odu.yaml
+++ b/OAS/tapi-odu.yaml
@@ -17722,25 +17722,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -17766,6 +17747,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -17776,6 +17782,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -17803,12 +17814,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -17820,6 +17836,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -17835,7 +17856,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -17847,6 +17868,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -17872,6 +17898,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -17903,6 +17934,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -35969,18 +36005,18 @@ definitions:
   tapi.fm.NotificationAugmentation1:
     type: "object"
     properties:
-      tca-info:
+      alarm-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.TcaInfo"
+        $ref: "#/definitions/tapi.fm.AlarmInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
   tapi.fm.NotificationAugmentation2:
     type: "object"
     properties:
-      alarm-info:
+      tca-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.AlarmInfo"
+        $ref: "#/definitions/tapi.fm.TcaInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
@@ -36266,6 +36302,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -36276,25 +36315,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -37088,22 +37114,31 @@ definitions:
   tapi.oam.ObjectNotificationAugmentation14:
     type: "object"
     properties:
-      oam-service:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.OamService"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation15:
-    type: "object"
-    properties:
       oam-job:
         description: "none"
         $ref: "#/definitions/tapi.oam.OamJob"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.ObjectNotificationAugmentation15:
+    type: "object"
+    properties:
+      oam-service:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.OamService"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.ObjectNotificationAugmentation2:
+    type: "object"
+    properties:
+      mip:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.Mip"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.ObjectNotificationAugmentation3:
     type: "object"
     properties:
       mep:
@@ -37112,7 +37147,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation3:
+  tapi.oam.ObjectNotificationAugmentation4:
     type: "object"
     properties:
       pm-threshold-data:
@@ -37121,21 +37156,12 @@ definitions:
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation4:
+  tapi.oam.ObjectNotificationAugmentation5:
     type: "object"
     properties:
       meg:
         description: "none"
         $ref: "#/definitions/tapi.oam.Meg"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation5:
-    type: "object"
-    properties:
-      mip:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.Mip"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -38053,18 +38079,18 @@ definitions:
   tapi.odu.ConnectionEndPointAugmentation1:
     type: "object"
     properties:
-      odu-connection-end-point-spec:
+      otu-connection-end-point-spec:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
+        $ref: "#/definitions/tapi.odu.OtuConnectionEndPointSpec"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
   tapi.odu.ConnectionEndPointAugmentation2:
     type: "object"
     properties:
-      otu-connection-end-point-spec:
+      odu-connection-end-point-spec:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OtuConnectionEndPointSpec"
+        $ref: "#/definitions/tapi.odu.OduConnectionEndPointSpec"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
@@ -38089,18 +38115,18 @@ definitions:
   tapi.odu.CurrentDataAugmentation1:
     type: "object"
     properties:
-      odu-fec-performance-data:
+      odu-error-performance-data:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OduFecPerformanceData"
+        $ref: "#/definitions/tapi.odu.OduErrorPerformanceData"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
   tapi.odu.CurrentDataAugmentation2:
     type: "object"
     properties:
-      odu-error-performance-data:
+      odu-fec-performance-data:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OduErrorPerformanceData"
+        $ref: "#/definitions/tapi.odu.OduFecPerformanceData"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
@@ -38160,18 +38186,18 @@ definitions:
   tapi.odu.HistoryDataAugmentation1:
     type: "object"
     properties:
-      odu-fec-performance-data:
+      odu-error-performance-data:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OduFecPerformanceData"
+        $ref: "#/definitions/tapi.odu.OduErrorPerformanceData"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
   tapi.odu.HistoryDataAugmentation2:
     type: "object"
     properties:
-      odu-error-performance-data:
+      odu-fec-performance-data:
         description: "none"
-        $ref: "#/definitions/tapi.odu.OduErrorPerformanceData"
+        $ref: "#/definitions/tapi.odu.OduFecPerformanceData"
     x-augmentation:
       prefix: "tapi-odu"
       namespace: "urn:onf:otcc:yang:tapi-odu"
@@ -39363,27 +39389,27 @@ definitions:
   tapi.path.computation.ObjectNotificationAugmentation11:
     type: "object"
     properties:
-      path-optimization-constraint:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation12:
-    type: "object"
-    properties:
       path-objective-function:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation13:
+  tapi.path.computation.ObjectNotificationAugmentation12:
     type: "object"
     properties:
       path-service-end-point:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
+  tapi.path.computation.ObjectNotificationAugmentation13:
+    type: "object"
+    properties:
+      path-optimization-constraint:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -39918,18 +39944,18 @@ definitions:
   tapi.streaming.ContextAugmentation1:
     type: "object"
     properties:
-      stream-context:
-        description: "Augments the base TAPI Context with StreamContext model."
-        $ref: "#/definitions/tapi.streaming.context.StreamContext"
+      stream-admin-context:
+        description: "Augments the base TAPI Context with StreamAdminContext model."
+        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.ContextAugmentation2:
     type: "object"
     properties:
-      stream-admin-context:
-        description: "Augments the base TAPI Context with StreamAdminContext model."
-        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
+      stream-context:
+        description: "Augments the base TAPI Context with StreamContext model."
+        $ref: "#/definitions/tapi.streaming.context.StreamContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -40025,18 +40051,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -40569,18 +40595,18 @@ definitions:
   tapi.topology.ObjectNotificationAugmentation10:
     type: "object"
     properties:
-      rule:
+      network-topology-service:
         description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
+        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.ObjectNotificationAugmentation9:
     type: "object"
     properties:
-      network-topology-service:
+      rule:
         description: "none"
-        $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
