--- a/OAS/tapi-path-computation.yaml
+++ b/OAS/tapi-path-computation.yaml
@@ -1923,25 +1923,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -1967,6 +1948,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -1977,6 +1983,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -2004,12 +2015,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -2021,6 +2037,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -2036,7 +2057,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -2048,6 +2069,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -2073,6 +2099,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -2104,6 +2135,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -9697,6 +9733,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -9707,25 +9746,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -9758,7 +9784,7 @@ definitions:
         description: "The list of relevant changed attributes and their values."
         items:
           $ref: "#/definitions/tapi.notification.NameAndValueChange"
-  tapi.notification.ObjectNotificationAugmentation6:
+  tapi.notification.ObjectNotificationAugmentation1:
     type: "object"
     properties:
       service-interface-point:
@@ -9848,12 +9874,12 @@ definitions:
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotification:
     allOf:
     - $ref: "#/definitions/tapi.notification.ObjectNotification"
-    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation6"
-    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation1"
+    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation1"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation2"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation3"
-    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation4"
+    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation4"
     - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation5"
+    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation6"
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotificationWrapper:
     properties:
       object-notification:
@@ -10046,21 +10072,12 @@ definitions:
     - "SNG"
     - "NODE"
     - "LINK"
-  tapi.path.computation.ObjectNotificationAugmentation1:
+  tapi.path.computation.ObjectNotificationAugmentation2:
     type: "object"
     properties:
       path-optimization-constraint:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathOptimizationConstraint"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation2:
-    type: "object"
-    properties:
-      path-objective-function:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -10070,6 +10087,15 @@ definitions:
       path-service-end-point:
         description: "none"
         $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
+  tapi.path.computation.ObjectNotificationAugmentation4:
+    type: "object"
+    properties:
+      path-objective-function:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathObjectiveFunction"
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
@@ -11260,21 +11286,21 @@ definitions:
     properties:
       node:
         $ref: "#/definitions/tapi.topology.Node"
-  tapi.topology.ObjectNotificationAugmentation4:
-    type: "object"
-    properties:
-      rule:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
-    x-augmentation:
-      prefix: "tapi-topology"
-      namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.ObjectNotificationAugmentation5:
     type: "object"
     properties:
       network-topology-service:
         description: "none"
         $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+    x-augmentation:
+      prefix: "tapi-topology"
+      namespace: "urn:onf:otcc:yang:tapi-topology"
+  tapi.topology.ObjectNotificationAugmentation6:
+    type: "object"
+    properties:
+      rule:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
