--- a/OAS/tapi-connectivity.yaml
+++ b/OAS/tapi-connectivity.yaml
@@ -548,7 +548,7 @@ paths:
         description: "tapi.connectivity.ConnectivityContext to be added to list"
         required: false
         schema:
-          $ref: "#/definitions/tapi.connectivity.ConnectivityContext"
+          $ref: "#/definitions/tapi.connectivity.ConnectivityContextWrapper"
       responses:
         201:
           description: "Object created"
@@ -12150,25 +12150,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -12194,6 +12175,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -12204,6 +12210,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -12231,12 +12242,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -12248,6 +12264,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -12263,7 +12284,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -12275,6 +12296,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -12300,6 +12326,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -12331,6 +12362,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -20721,7 +20757,7 @@ definitions:
     properties:
       output:
         $ref: "#/definitions/tapi.connectivity.getconnectivityservicelist.Output"
-  tapi.connectivity.ObjectNotificationAugmentation7:
+  tapi.connectivity.ObjectNotificationAugmentation6:
     type: "object"
     properties:
       connection-end-point:
@@ -20730,7 +20766,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
-  tapi.connectivity.ObjectNotificationAugmentation8:
+  tapi.connectivity.ObjectNotificationAugmentation7:
     type: "object"
     properties:
       connectivity-service-end-point:
@@ -20739,7 +20775,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
-  tapi.connectivity.ObjectNotificationAugmentation9:
+  tapi.connectivity.ObjectNotificationAugmentation8:
     type: "object"
     properties:
       switch-control:
@@ -21486,6 +21522,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -21496,25 +21535,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -21547,7 +21573,7 @@ definitions:
         description: "The list of relevant changed attributes and their values."
         items:
           $ref: "#/definitions/tapi.notification.NameAndValueChange"
-  tapi.notification.ObjectNotificationAugmentation1:
+  tapi.notification.ObjectNotificationAugmentation9:
     type: "object"
     properties:
       service-interface-point:
@@ -21636,16 +21662,16 @@ definitions:
         $ref: "#/definitions/tapi.notification.context.NotificationContext"
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotification:
     allOf:
+    - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation6"
     - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation7"
     - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation8"
-    - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation9"
     - $ref: "#/definitions/tapi.notification.ObjectNotification"
-    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation1"
+    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation9"
+    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation3"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation4"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation5"
-    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation6"
+    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation1"
     - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation2"
-    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation3"
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotificationWrapper:
     properties:
       object-notification:
@@ -21838,6 +21864,15 @@ definitions:
     - "SNG"
     - "NODE"
     - "LINK"
+  tapi.path.computation.ObjectNotificationAugmentation3:
+    type: "object"
+    properties:
+      path-service-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
+    x-augmentation:
+      prefix: "tapi-path-computation"
+      namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.ObjectNotificationAugmentation4:
     type: "object"
     properties:
@@ -21848,15 +21883,6 @@ definitions:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
   tapi.path.computation.ObjectNotificationAugmentation5:
-    type: "object"
-    properties:
-      path-service-end-point:
-        description: "none"
-        $ref: "#/definitions/tapi.path.computation.PathServiceEndPoint"
-    x-augmentation:
-      prefix: "tapi-path-computation"
-      namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation6:
     type: "object"
     properties:
       path-optimization-constraint:
@@ -22396,18 +22422,18 @@ definitions:
   tapi.streaming.ContextAugmentation1:
     type: "object"
     properties:
-      stream-admin-context:
-        description: "Augments the base TAPI Context with StreamAdminContext model."
-        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
+      stream-context:
+        description: "Augments the base TAPI Context with StreamContext model."
+        $ref: "#/definitions/tapi.streaming.context.StreamContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.ContextAugmentation2:
     type: "object"
     properties:
-      stream-context:
-        description: "Augments the base TAPI Context with StreamContext model."
-        $ref: "#/definitions/tapi.streaming.context.StreamContext"
+      stream-admin-context:
+        description: "Augments the base TAPI Context with StreamAdminContext model."
+        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -23044,21 +23070,21 @@ definitions:
     properties:
       node-rule-group:
         $ref: "#/definitions/tapi.topology.NodeRuleGroup"
+  tapi.topology.ObjectNotificationAugmentation1:
+    type: "object"
+    properties:
+      rule:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.Rule"
+    x-augmentation:
+      prefix: "tapi-topology"
+      namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.ObjectNotificationAugmentation2:
     type: "object"
     properties:
       network-topology-service:
         description: "none"
         $ref: "#/definitions/tapi.topology.NetworkTopologyService"
-    x-augmentation:
-      prefix: "tapi-topology"
-      namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.ObjectNotificationAugmentation3:
-    type: "object"
-    properties:
-      rule:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
