--- a/OAS/tapi-dsr.yaml
+++ b/OAS/tapi-dsr.yaml
@@ -13929,25 +13929,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -13973,6 +13954,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -13983,6 +13989,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -14010,12 +14021,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -14027,6 +14043,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -14042,7 +14063,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -14054,6 +14075,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -14079,6 +14105,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -14110,6 +14141,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -26588,15 +26624,6 @@ definitions:
   tapi.connectivity.ObjectNotificationAugmentation10:
     type: "object"
     properties:
-      connection-end-point:
-        description: "none"
-        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
-    x-augmentation:
-      prefix: "tapi-connectivity"
-      namespace: "urn:onf:otcc:yang:tapi-connectivity"
-  tapi.connectivity.ObjectNotificationAugmentation11:
-    type: "object"
-    properties:
       connectivity-service-end-point:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.ConnectivityServiceEndPoint"
@@ -26609,6 +26636,15 @@ definitions:
       switch-control:
         description: "none"
         $ref: "#/definitions/tapi.connectivity.SwitchControl"
+    x-augmentation:
+      prefix: "tapi-connectivity"
+      namespace: "urn:onf:otcc:yang:tapi-connectivity"
+  tapi.connectivity.ObjectNotificationAugmentation9:
+    type: "object"
+    properties:
+      connection-end-point:
+        description: "none"
+        $ref: "#/definitions/tapi.connectivity.ConnectionEndPoint"
     x-augmentation:
       prefix: "tapi-connectivity"
       namespace: "urn:onf:otcc:yang:tapi-connectivity"
@@ -27379,7 +27415,7 @@ definitions:
     properties:
       detector-info:
         $ref: "#/definitions/tapi.fm.DetectorInfo"
-  tapi.fm.EventNotificationAugmentation1:
+  tapi.fm.EventNotificationAugmentation2:
     type: "object"
     properties:
       detected-condition:
@@ -27391,18 +27427,18 @@ definitions:
   tapi.fm.NotificationAugmentation1:
     type: "object"
     properties:
-      alarm-info:
+      tca-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.AlarmInfo"
+        $ref: "#/definitions/tapi.fm.TcaInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
   tapi.fm.NotificationAugmentation2:
     type: "object"
     properties:
-      tca-info:
+      alarm-info:
         description: "none"
-        $ref: "#/definitions/tapi.fm.TcaInfo"
+        $ref: "#/definitions/tapi.fm.AlarmInfo"
     x-augmentation:
       prefix: "tapi-fm"
       namespace: "urn:onf:otcc:yang:tapi-fm"
@@ -27551,7 +27587,7 @@ definitions:
         \ in which a reaction is asynchronously triggered in the receiver without\
         \ a reply.\r\n            The data carried by the communication are represented\
         \ as attributes of the Signal.'"
-  tapi.notification.EventNotificationAugmentation2:
+  tapi.notification.EventNotificationAugmentation1:
     type: "object"
     properties:
       object-notification:
@@ -27688,6 +27724,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -27698,25 +27737,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -27839,22 +27865,22 @@ definitions:
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotification:
     allOf:
     - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation10"
-    - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation11"
     - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation16"
+    - $ref: "#/definitions/tapi.connectivity.ObjectNotificationAugmentation9"
     - $ref: "#/definitions/tapi.notification.ObjectNotification"
     - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation1"
+    - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation14"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation15"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation2"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation3"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation4"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation5"
     - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation6"
-    - $ref: "#/definitions/tapi.oam.ObjectNotificationAugmentation7"
+    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation11"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation12"
     - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation13"
-    - $ref: "#/definitions/tapi.path.computation.ObjectNotificationAugmentation14"
+    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation7"
     - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation8"
-    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation9"
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotificationWrapper:
     properties:
       object-notification:
@@ -27977,9 +28003,9 @@ definitions:
           type: "string"
   tapi.notification.notificationcontext.EventNotification:
     allOf:
-    - $ref: "#/definitions/tapi.fm.EventNotificationAugmentation1"
+    - $ref: "#/definitions/tapi.fm.EventNotificationAugmentation2"
     - $ref: "#/definitions/tapi.notification.EventNotification"
-    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation2"
+    - $ref: "#/definitions/tapi.notification.EventNotificationAugmentation1"
   tapi.notification.notificationcontext.EventNotificationWrapper:
     properties:
       event-notification:
@@ -28538,6 +28564,15 @@ definitions:
     properties:
       tapi-oam:oam-service:
         $ref: "#/definitions/tapi.oam.OamService"
+  tapi.oam.ObjectNotificationAugmentation14:
+    type: "object"
+    properties:
+      oam-service:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.OamService"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
   tapi.oam.ObjectNotificationAugmentation15:
     type: "object"
     properties:
@@ -28550,36 +28585,36 @@ definitions:
   tapi.oam.ObjectNotificationAugmentation2:
     type: "object"
     properties:
-      pm-threshold-data:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.PmThresholdData"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation3:
-    type: "object"
-    properties:
-      mip:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.Mip"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation4:
-    type: "object"
-    properties:
       mep:
         description: "none"
         $ref: "#/definitions/tapi.oam.Mep"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation5:
+  tapi.oam.ObjectNotificationAugmentation3:
     type: "object"
     properties:
       meg:
         description: "none"
         $ref: "#/definitions/tapi.oam.Meg"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.ObjectNotificationAugmentation4:
+    type: "object"
+    properties:
+      pm-threshold-data:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.PmThresholdData"
+    x-augmentation:
+      prefix: "tapi-oam"
+      namespace: "urn:onf:otcc:yang:tapi-oam"
+  tapi.oam.ObjectNotificationAugmentation5:
+    type: "object"
+    properties:
+      mip:
+        description: "none"
+        $ref: "#/definitions/tapi.oam.Mip"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -28589,15 +28624,6 @@ definitions:
       oam-service-point:
         description: "none"
         $ref: "#/definitions/tapi.oam.OamServicePoint"
-    x-augmentation:
-      prefix: "tapi-oam"
-      namespace: "urn:onf:otcc:yang:tapi-oam"
-  tapi.oam.ObjectNotificationAugmentation7:
-    type: "object"
-    properties:
-      oam-service:
-        description: "none"
-        $ref: "#/definitions/tapi.oam.OamService"
     x-augmentation:
       prefix: "tapi-oam"
       namespace: "urn:onf:otcc:yang:tapi-oam"
@@ -29309,7 +29335,7 @@ definitions:
     - "SNG"
     - "NODE"
     - "LINK"
-  tapi.path.computation.ObjectNotificationAugmentation12:
+  tapi.path.computation.ObjectNotificationAugmentation11:
     type: "object"
     properties:
       path-objective-function:
@@ -29318,7 +29344,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation13:
+  tapi.path.computation.ObjectNotificationAugmentation12:
     type: "object"
     properties:
       path-service-end-point:
@@ -29327,7 +29353,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-path-computation"
       namespace: "urn:onf:otcc:yang:tapi-path-computation"
-  tapi.path.computation.ObjectNotificationAugmentation14:
+  tapi.path.computation.ObjectNotificationAugmentation13:
     type: "object"
     properties:
       path-optimization-constraint:
@@ -29867,18 +29893,18 @@ definitions:
   tapi.streaming.ContextAugmentation1:
     type: "object"
     properties:
-      stream-admin-context:
-        description: "Augments the base TAPI Context with StreamAdminContext model."
-        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
+      stream-context:
+        description: "Augments the base TAPI Context with StreamContext model."
+        $ref: "#/definitions/tapi.streaming.context.StreamContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.ContextAugmentation2:
     type: "object"
     properties:
-      stream-context:
-        description: "Augments the base TAPI Context with StreamContext model."
-        $ref: "#/definitions/tapi.streaming.context.StreamContext"
+      stream-admin-context:
+        description: "Augments the base TAPI Context with StreamAdminContext model."
+        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -30515,7 +30541,7 @@ definitions:
     properties:
       node-rule-group:
         $ref: "#/definitions/tapi.topology.NodeRuleGroup"
-  tapi.topology.ObjectNotificationAugmentation8:
+  tapi.topology.ObjectNotificationAugmentation7:
     type: "object"
     properties:
       rule:
@@ -30524,7 +30550,7 @@ definitions:
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
-  tapi.topology.ObjectNotificationAugmentation9:
+  tapi.topology.ObjectNotificationAugmentation8:
     type: "object"
     properties:
       network-topology-service:
