--- a/OAS/tapi-topology.yaml
+++ b/OAS/tapi-topology.yaml
@@ -1712,25 +1712,6 @@ paths:
         400:
           description: "Internal error"
   /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter:
-    get:
-      tags:
-      - "tapi-notification"
-      summary: "returns tapi.notification.SubscriptionFilter"
-      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
-        \ instance."
-      parameters:
-      - name: "uuid"
-        in: "path"
-        description: "Id of notif-subscription"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "tapi.notification.SubscriptionFilter"
-          schema:
-            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
-        400:
-          description: "Internal error"
     post:
       tags:
       - "tapi-notification"
@@ -1756,6 +1737,31 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}:
+    get:
+      tags:
+      - "tapi-notification"
+      summary: "returns tapi.notification.SubscriptionFilter"
+      description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
+        \ instance."
+      parameters:
+      - name: "uuid"
+        in: "path"
+        description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "tapi.notification.SubscriptionFilter"
+          schema:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilterWrapper"
+        400:
+          description: "Internal error"
     put:
       tags:
       - "tapi-notification"
@@ -1766,6 +1772,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -1793,12 +1804,17 @@ paths:
         description: "Id of notif-subscription"
         required: true
         type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
+        required: true
+        type: "string"
       responses:
         400:
           description: "Internal error"
         204:
           description: "Object deleted"
-  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name:
+  /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name:
     post:
       tags:
       - "tapi-notification"
@@ -1810,6 +1826,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - in: "body"
@@ -1825,7 +1846,7 @@ paths:
           description: "Internal error"
         409:
           description: "Object already exists"
-  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter/name={value-name}/
+  ? /data/tapi-common:context/tapi-notification:notification-context/notif-subscription={uuid}/subscription-filter={local-id}/name={value-name}/
   : get:
       tags:
       - "tapi-notification"
@@ -1837,6 +1858,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -1862,6 +1888,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -1893,6 +1924,11 @@ paths:
       - name: "uuid"
         in: "path"
         description: "Id of notif-subscription"
+        required: true
+        type: "string"
+      - name: "local-id"
+        in: "path"
+        description: "Id of subscription-filter"
         required: true
         type: "string"
       - name: "value-name"
@@ -5784,6 +5820,9 @@ definitions:
     - $ref: "#/definitions/tapi.common.GlobalClass"
     - type: "object"
       properties:
+        subscription-state:
+          description: "The SubscriptionState value."
+          $ref: "#/definitions/tapi.notification.SubscriptionState"
         notification:
           type: "array"
           description: "The Notification instances associated to this NotificationSubscriptionService\
@@ -5794,25 +5833,12 @@ definitions:
           description: "The NotificationChannel instance of this NotificationSubscriptionService\
             \ instance."
           $ref: "#/definitions/tapi.notification.NotificationChannel"
-        subscription-state:
-          description: "The SubscriptionState value."
-          $ref: "#/definitions/tapi.notification.SubscriptionState"
-        supported-object-types:
-          type: "array"
-          description: "The supported ObjectType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
-        supported-notification-types:
-          type: "array"
-          description: "The supported NotificationType value(s) of this NotificationSubscriptionService\
-            \ instance."
-          items:
-            type: "string"
         subscription-filter:
+          type: "array"
           description: "The SubscriptionFilter instance of this NotificationSubscriptionService\
             \ instance."
-          $ref: "#/definitions/tapi.notification.SubscriptionFilter"
+          items:
+            $ref: "#/definitions/tapi.notification.SubscriptionFilter"
         event-notification:
           type: "array"
           description: "The EventNotification instances associated to this NotificationSubscriptionService\
@@ -5845,7 +5871,7 @@ definitions:
         description: "The list of relevant changed attributes and their values."
         items:
           $ref: "#/definitions/tapi.notification.NameAndValueChange"
-  tapi.notification.ObjectNotificationAugmentation3:
+  tapi.notification.ObjectNotificationAugmentation1:
     type: "object"
     properties:
       service-interface-point:
@@ -5935,9 +5961,9 @@ definitions:
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotification:
     allOf:
     - $ref: "#/definitions/tapi.notification.ObjectNotification"
-    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation3"
-    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation1"
+    - $ref: "#/definitions/tapi.notification.ObjectNotificationAugmentation1"
     - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation2"
+    - $ref: "#/definitions/tapi.topology.ObjectNotificationAugmentation3"
   tapi.notification.context.notificationcontext.eventnotification.ObjectNotificationWrapper:
     properties:
       object-notification:
@@ -6186,18 +6212,18 @@ definitions:
   tapi.streaming.ContextAugmentation1:
     type: "object"
     properties:
-      stream-context:
-        description: "Augments the base TAPI Context with StreamContext model."
-        $ref: "#/definitions/tapi.streaming.context.StreamContext"
+      stream-admin-context:
+        description: "Augments the base TAPI Context with StreamAdminContext model."
+        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.ContextAugmentation2:
     type: "object"
     properties:
-      stream-admin-context:
-        description: "Augments the base TAPI Context with StreamAdminContext model."
-        $ref: "#/definitions/tapi.streaming.StreamAdminContext"
+      stream-context:
+        description: "Augments the base TAPI Context with StreamContext model."
+        $ref: "#/definitions/tapi.streaming.context.StreamContext"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -6293,18 +6319,18 @@ definitions:
   tapi.streaming.SupportedStreamTypeAugmentation1:
     type: "object"
     properties:
-      compacted-log-details:
+      connection-protocol-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
+        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
   tapi.streaming.SupportedStreamTypeAugmentation2:
     type: "object"
     properties:
-      connection-protocol-details:
+      compacted-log-details:
         description: "none"
-        $ref: "#/definitions/tapi.streaming.ConnectionProtocolDetails"
+        $ref: "#/definitions/tapi.streaming.CompactedLogDetails"
     x-augmentation:
       prefix: "tapi-streaming"
       namespace: "urn:onf:otcc:yang:tapi-streaming"
@@ -6824,21 +6850,21 @@ definitions:
     properties:
       node:
         $ref: "#/definitions/tapi.topology.Node"
-  tapi.topology.ObjectNotificationAugmentation1:
-    type: "object"
-    properties:
-      rule:
-        description: "none"
-        $ref: "#/definitions/tapi.topology.Rule"
-    x-augmentation:
-      prefix: "tapi-topology"
-      namespace: "urn:onf:otcc:yang:tapi-topology"
   tapi.topology.ObjectNotificationAugmentation2:
     type: "object"
     properties:
       network-topology-service:
         description: "none"
         $ref: "#/definitions/tapi.topology.NetworkTopologyService"
+    x-augmentation:
+      prefix: "tapi-topology"
+      namespace: "urn:onf:otcc:yang:tapi-topology"
+  tapi.topology.ObjectNotificationAugmentation3:
+    type: "object"
+    properties:
+      rule:
+        description: "none"
+        $ref: "#/definitions/tapi.topology.Rule"
     x-augmentation:
       prefix: "tapi-topology"
       namespace: "urn:onf:otcc:yang:tapi-topology"
